--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div>
         <h1><span>Stay</span>Food</h1>
       </div>
-      <div class="links">
+      <div class="links" id="nav-links">
         <a href="">Home</a>
         <a href="">Menu</a>
         <a href="">About</a>
@@ -27,10 +27,16 @@
       <div class="login">
         <button>Login</button>
       </div>
+      <div class="toggle-button" id="toggle-button">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </nav>
 
     <!-- content -->
     <div class="content">
+      <div><img src="assets/Food.png" alt="" /></div>
       <div class="text-content">
         <h3>GET 30% FREE IN FIRST ORDER</h3>
         <h1>Try Our Food & Enjoy With Family Anytime</h1>
@@ -43,7 +49,6 @@
           <p>ONLY <span>$3.57</span></p>
         </div>
       </div>
-      <div><img src="assets/Food.png" alt="" /></div>
       <div class="social">
         <div><img src="assets/instagram.png" alt="" /></div>
         <div><img src="assets/facebook.png" alt="" /></div>
@@ -92,5 +97,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
