--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StayFood</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,7 +61,7 @@
     <div class="card-container">
       <div class="card">
         <div class="food">
-          <img src="assets/Fruit-platter.png".png" alt="" />
+          <img src="assets/Fruit-platter.png" alt="" />
         </div>
         <div class="text-card">
           <h3>Fruit Plater</h3>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="card">
-        <div class="food"><img src="assets/Pizza.png".png" alt="" /></div>
+        <div class="food"><img src="assets/Pizza.png" alt="" /></div>
         <div class="text-card">
           <h3>Pizza</h3>
           <p>$3.57</p>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="card">
-        <div class="food"><img src="assets/Salad.png".png" alt="" /></div>
+        <div class="food"><img src="assets/Salad.png" alt="" /></div>
         <div class="text-card">
           <h3>Salad</h3>
           <p>$3.57</p>
@@ -97,6 +97,7 @@
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
